target line chart with c3 d3 main file

--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,9 @@
     height: 400px !important;
     widows: 400px !important;
 }
+
+.c3-xgrid-focus { display: block; }
+
+.c3-ygrid-focus { display: block; }
+
+/* .c3-event-rects { display: none } */
